# onlinesoftmax-re

./: 3  CMakeLists.txt  README.md
include/: host_functions.h  onlinesoftmax.cuh  safesoftmax.cuh  softmax.cuh
src/: online_softmax.cpp  safe_softmax.cu  softmax.cu
src/cpp/: safe_softmax.cpp
